Tue Oct 27 21:20:35 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb: add TkVariable#+@ and -@ method.

Tue Oct 27 08:56:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb: reverted r25443 because build_os is used in mkmf.rb
	  on some platforms.  [ruby-core:26332]

Tue Oct 27 07:38:39 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c,stubs.c: remove errors or warnings when compiled
	  with old ruby 1.8.x.

	* ext/tk/tkutil/tkutil.c: ditto.

Mon Oct 26 13:24:17 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/remote-tk.rb: typo fixed.

Mon Oct 26 12:06:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_fwrite): adjust stdio file position after direct write on
	  BSDish platforms.   [ruby-core:26300]

Sun Oct 25 20:04:35 2009  Akinori MUSHA  <knu@iDaemons.org>

	* object.c (rb_class_initialize): The inherited hook should be run
	  immediately after a new subclass is created, which is before
	  evaluating a given block. [Backport #621]

Sun Oct 25 20:02:46 2009  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: Fix syntax error.  when() is not defined in this
	  branch.

Fri Oct 23 14:25:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (target, target_alias): replace with real cpu.

	* mkconfig.rb: build* are not needed in rbconfig.rb.

Thu Oct 22 17:57:53 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#fu_get_uid, fu_get_gid): Do not
	  convert an integer back and forth.

Thu Oct 22 17:29:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (arg_prepend): removed.  a patch from Mikhail T. in
	  [ruby-core:26217].

	* intern.h (rb_thread_join): added prototype.  a patch from
	  Mikhail T. in [ruby-core:26217].

Wed Oct 21 01:19:56 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/monitor.rb (MonitorMixin.mon_release): ensure the scheduled
	  thread to be alive when a thread is releasing a monitor. #2240
